components/AdvantagesBlock/AdvantagesBlock.module.css
.advantages__item {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: center;
    min-height: 350px;
    width: 100%;
    padding: 50px;
    margin-bottom: 40px;
    border-radius: 30px;
    overflow: hidden;
    background-color: #dedbde;
    transition: all 0.2s ease-in-out;
    background-repeat: no-repeat;
    background-position: 10% center;
}

.advantages__item--right {
    align-items: flex-end;
    text-align: right;
}

.advantages__item:last-child {
    margin-bottom: 0;
}

.advantages__content {
    max-width: 360px;
}

.advantages__item-text {
    width: 100%;
    vertical-align: middle;
    margin-bottom: 15px;
    font-size: 40px;
    line-height: 40px;
    font-weight: bold;
    /* color: var(--font-color); */
    color: #000000;
    white-space: pre-line;
}

.advantages__item-description {
    width: 100%;
    /* color: var(--secondary-font-color); */
    color: #313131;
    white-space: pre-line;
}


.advantage__item-image {
    position: absolute;
    z-index: -1;
    transition: transform 800ms ease-in-out;
}

.advantages__item:hover .advantage__item-image {
    transform: scale(1.02);
}


@media screen and (max-width: 768px) {
    .advantages__content {
        max-width: 100%;
        width: 100%;
    }

    .advantages__item {
        min-height: 400px;
        padding: 40px 20px;
        margin-bottom: 40px;
        justify-content: flex-end;
    }

    .advantages__item--right {
        justify-content: flex-end;
        text-align: left;
    }

    .advantages__item-text {
        font-size: 28px;
        line-height: 32px;
        margin-bottom: 10px;
        max-width: 320px;
    }
    
    .advantage__item--1-background {
        background-position: top center;
        background-size: 100%;
    }

    .advantage__item--1-background:hover {
        background-size: 100%;
    }

    .advantage__item--2-background {
        background-position: top center;
        background-size: 100%;
    }

    .advantage__item--2-background:hover {
        background-size: 100%;
    }

    .advantage__item--3-background {
        background-position: top center;
        background-size: 100%;
    }

    .advantage__item--3-background:hover {
        background-size: 100%;
    }
}

